--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "csv-parse": "^5.5.5",
+    "csv-parser": "^3.0.0",
+    "csv-stringify": "^6.4.6",
+    "fs": "^0.0.1-security",
     "next": "14.1.4",
+    "node-fetch": "^3.3.2",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-dom": "^18"
   },
