--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "clsx": "^2.1.0",
+    "cn": "^0.1.1",
     "csv-parse": "^5.5.5",
     "csv-parser": "^3.0.0",
     "csv-stringify": "^6.4.6",
@@ -17,7 +20,8 @@
     "node-fetch": "^3.3.2",
     "papaparse": "^5.4.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "20.12.3",
